add placeholder partners

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -310,7 +310,7 @@ figure {
 
 .section.top-section {
   padding-top: 0px;
-  paddingottom: 50px;
+  /* padding-bottom: 50px; */
   background-color: transparent;
 }
 
@@ -569,7 +569,36 @@ figure {
   background-image: none;
   box-shadow: 0 10px 50px -12px rgba(0, 0, 0, .3), inset 0 0 0 1px hsla(0, 0%, 100%, .7);
 }
-
+.gallery {
+    justify-content: center;
+}
+.gallery-container {
+  max-width: 800px;
+}
+.partner {
+  position: relative;
+  display: block;
+  width: 400px;
+  height: 400px;
+  float: left;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  /* background-position: 100% 50%; */
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 .left-part {
   position: relative;
   display: block;
