--- a/src/components/Landing/styles/Landing.css
+++ b/src/components/Landing/styles/Landing.css
@@ -2211,50 +2211,49 @@ html.w-mod-js *[data-ix="preloader"] {
   border-radius: 0.25rem;
   transition: 0.4s ease;
   margin-bottom: 30px;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.15);
-  /* transform: translateY(-5px) scale(1.02); */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
 }
 .content-box .card-img-top {
-  width: 100%;
-  height: 80%;
-  border-top-left-radius: calc(0.25rem - 1px);
-  border-top-right-radius: calc(0.25rem - 1px);
+    width: 100%;
+    height: 80%;
+    border-top-left-radius: calc(0.25rem - 1px);
+    border-top-right-radius: calc(0.25rem - 1px);
 }
 .content-box .card-body {
-  width: 100%;
-  height: 30%;
-  -webkit-box-flex: 1;
-  -ms-flex: 1 1 auto;
-  flex: 1 1 auto;
-  padding: 1.25rem;
-  position: absolute;
-  bottom: 0;
-  background-color: whitesmoke;
-  text-align: center;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+    width: 100%;
+    height: 30%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+    position: absolute;
+    bottom: 0;
+    background-color: whitesmoke;
+    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
 .content-box.card-body p {
     font-size: 15px;
 }
 .gallery h6 {
-  font-size: 17px;
-  font-weight: bold;
+    font-size: 17px;
+    font-weight: bold;
 }
 .gallery a {
-  color: #212529;
-  text-decoration: none;
+    color: #212529;
+    text-decoration: none;
 }
 .gallery a:hover {
     text-decoration: underline;
 }
 @media (min-width: 576px) {
-  .content-box {
-    width: 45%;
-  }
-  .gallery .transform-on-hover:hover {
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15) !important;
-      /* transform: none; */
-  }
+    .content-box {
+        width: 45%;
+    }
+    .gallery .transform-on-hover:hover {
+        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
+        transform: scale(1.02, 1.02);
+    }
 }
 
 @media (min-width: 768px){
