--- a/src/components/Landing/styles/Landing.css
+++ b/src/components/Landing/styles/Landing.css
@@ -3075,9 +3075,6 @@ html.w-mod-js *[data-ix="preloader"] {
     padding-left: 0px; }
   .left-part {
     width: 100%; }
-  /* .partner {      
-    margin: auto;
-  } */
   .align-right.left-mobile {
     text-align: left; }
   .project-content {
@@ -3197,8 +3194,6 @@ html.w-mod-js *[data-ix="preloader"] {
   .button.submit {
     width: 100%;
     border-radius: 10px; }
-  .partner {
-    width: 50%; }
   .left-part {
     height: 500px; }
   .features-center {
@@ -3255,8 +3250,6 @@ html.w-mod-js *[data-ix="preloader"] {
     height: 300px; }
   .features-center {
     width: 95%; }
-  .partner {
-    margin: auto; }
   .project-wrapper {
     margin-bottom: 50px; }
   .project-content {
@@ -3320,67 +3313,19 @@ html.w-mod-js *[data-ix="preloader"] {
     max-width: 280px; } }
 
 /* Partner Gallery */
-.gallery .gallery-container {
+.gallery {
+  padding: 20px 40px;
   display: flex;
-  flex-flow: row wrap;
-  justify-content: space-around;
-  align-items: top; }
-  .gallery .gallery-container .card {
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    max-width: 400px;
-    height: 400px;
-    word-wrap: break-word;
-    background-color: white;
-    background-clip: border-box;
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
-    transition: 0.4s ease;
-    margin-bottom: 30px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15); }
-    .gallery .gallery-container .card .card-img-top {
-      width: 100%;
-      height: 80%;
-      border-top-left-radius: calc(0.25rem - 1px);
-      border-top-right-radius: calc(0.25rem - 1px); }
-    .gallery .gallery-container .card .card-body {
-      width: 100%;
-      height: 30%;
-      -webkit-box-flex: 1;
-      -ms-flex: 1 1 auto;
-      flex: 1 1 auto;
-      padding: 1.25rem;
-      position: absolute;
-      bottom: 0;
-      background-color: whitesmoke;
-      text-align: center;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
-      .gallery .gallery-container .card .card-body p {
-        font-size: 15px; }
-  .gallery .gallery-container .content-box {
-    width: 100%; }
-
-.gallery h6 {
-  font-size: 17px;
-  font-weight: bold; }
-
-.gallery a {
-  color: #212529;
-  text-decoration: none !important; }
-
-@media (min-width: 576px) {
-  .content-box {
-    width: 45%; }
-  .gallery .transform-on-hover:hover {
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
-    transform: scale(1.02, 1.02); } }
-
-@media (min-width: 768px) {
-  .content-box {
-    width: 30%; } }
+  justify-content: center;
+  align-items: center; }
+  .gallery .partner {
+    margin: 20px;
+    transition: 0.15s ease-in-out;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06); }
+    .gallery .partner .textarea {
+      background-color: whitesmoke !important;
+      border-radius: 0 0 4px 4px; }
+      .gallery .partner .textarea a {
+        text-decoration: none !important; }
+  .gallery .partner:hover {
+    transform: translateY(-10px) scale(1.02); }
