--- a/src/components/Landing/styles/_partnerSection.scss
+++ b/src/components/Landing/styles/_partnerSection.scss
@@ -2,85 +2,25 @@
 /* Partner Gallery */
 
 .gallery {
-    .gallery-container {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-around;
-        align-items: top;
-
-        .card {
-            position: relative;
-            display: -webkit-box;
-            display: -ms-flexbox;
-            display: flex;
-            -webkit-box-orient: vertical;
-            -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-            flex-direction: column;
-            max-width: 400px;
-            height: 400px;
-            word-wrap: break-word;
-            background-color: white;
-            background-clip: border-box;
-            border: 1px solid rgba(0, 0, 0, 0.125);
-            border-radius: 0.25rem;
-            transition: 0.4s ease;
-            margin-bottom: 30px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
-
-            .card-img-top {
-                width: 100%;
-                height: 80%;
-                border-top-left-radius: calc(0.25rem - 1px);
-                border-top-right-radius: calc(0.25rem - 1px);
-            }
-
-            .card-body {
-                width: 100%;
-                height: 30%;
-                -webkit-box-flex: 1;
-                -ms-flex: 1 1 auto;
-                flex: 1 1 auto;
-                padding: 1.25rem;
-                position: absolute;
-                bottom: 0;
-                background-color: whitesmoke;
-                text-align: center;
-                box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-
-                p {
-                    font-size: 15px;
-                }
+    padding: 20px 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    .partner {
+        margin: 20px;
+        transition: 0.15s ease-in-out;
+        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+        .textarea {
+            background-color: whitesmoke !important;
+            border-radius: 0 0 4px 4px;
+            a {
+                text-decoration: none !important;
             }
         }
-        .content-box {
-            width: 100%;
-        }
     }
 
-    h6 {
-        font-size: 17px;
-        font-weight: bold;
-    }
-
-    a {
-        color: #212529;
-        text-decoration: none !important;
-    }
-}
-
-@media (min-width: 576px) {
-    .content-box {
-        width: 45%;
-    }
-    .gallery .transform-on-hover:hover {
-        box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.15);
-        transform: scale(1.02, 1.02);
-    }
-}
-
-@media (min-width: 768px){
-    .content-box {
-        width: 30%;
+    .partner:hover {
+        transform: translateY(-10px) scale(1.02);
     }
 }
